# ceos-ard-cli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  env.yml  pyproject.toml  setup.py
.github/workflows/: checks.yaml  publish.yml  python-publish.yml  test.yaml
ceos_ard_cli/: __init__.py  compile.py  generate.py  links.py  schema.py  util.py  validate.py
ceos_ard_cli/strictyaml/: id_reference.py  markdown.py  md_reference.py
ceos_ard_cli/utils/: deprecation.py  files.py  pfs.py  template.py  yaml.py
ceos_ard_cli/yaml/: id_reference.py  md_reference.py  yaml_util.py
