[project]
name = "ceos-ard-cli"
dynamic = ["version"]
description = "CLI tools for CEOS-ARD to generate and validate PFS documents"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Matthias Mohr" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "strictyaml>=1.7.0,<2",
    "jinja2>=3.1.0,<4",
    "click>=8.0.0,<9",
    "playwright>=1.50.0,<2",
    "bibtexparser==2.0.0b9",
]

[project.urls]
Homepage = "https://github.com/ceos-org/ceos-ard-cli"
Repository = "https://github.com/ceos-org/ceos-ard-cli"
Issues = "https://github.com/ceos-org/ceos-ard-cli/issues"

[project.optional-dependencies]
dev = [
    "ruff",        # Code formatting tool
    "pytest",      # Testing framework
    "pre-commit",  # Run tests on commit
    "build",       # Python build tool
]
[project.scripts]
ceos-ard = "ceos_ard_cli:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "ceos_ard_cli/version.py"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.11"
pandoc = "==3.8.2.1"
pandoc-crossref = "==0.3.22"
pip = "*"

[tool.pixi.pypi-dependencies]
ceos-ard-cli = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
ruff = ">=0.1,<1.0"
pytest = ">=9.0,<10.0"
pre-commit = ">=4.0,<=5.0"

[tool.pixi.environments]
default = {solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}

[tool.pixi.tasks]
install-browser = "playwright install chromium --with-deps"
build = "python -m build"
format = "ruff format ceos_ard_cli/"
lint = "ruff check ceos_ard_cli/ --fix --select I"
test = "pytest tests/"
check-all = {depends-on = ["format", "lint", "test"]}
install-dev = "python -m pip install -e ."

[tool.ruff]
line-length = 120
